--- a/.github/workflows/testOlleZap.yml
+++ b/.github/workflows/testOlleZap.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Scan the web application
     steps:
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.6.1
         with: 
