--- a/.github/workflows/testOlleZap.yml
+++ b/.github/workflows/testOlleZap.yml
@@ -16,6 +16,6 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.6.1
         with: 
-          docker_name: 'owasp/zap2docker-weekly'
+          docker_name: 'owasp/zap2docker-stable'
           target: 'http://testphp.vulnweb.com/'
           fail_action: true  # Fail the workflow if vulnerabilities are found
